# sap_roche_time_parser

./: .gitignore  Cargo.toml  index.html  index.js  package-lock.json  package.json  tailwind.config.js  webpack.config.js  worker.js  wrangler.toml
resources/: TimeStatement_20230401_20230813.txt
src/: lib.rs  main.rs
src/test/: raw-text.txt
webcomponents/: list-card.js
