[package]
name = "sap_time_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]


[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
console_error_panic_hook = "0.1.7"
nom = "7.1.3"
time = { version = "0.3", features = ["macros"] }
lopdf = "0.31.0"


#stdweb = "0.4.20" 

[dependencies.web-sys]
version = "0.3.64"
features = [
    'console',
    'Window',
    'Document',
    'DocumentFragment',
    'Node',
    'Element',
    'HtmlElement',
    'HtmlSlotElement',
    'HtmlTemplateElement',
    'CustomElementRegistry',
    'ShadowRoot',
    'ShadowRootInit',
    'ShadowRootMode',
    'AudioContext',
    'File',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType'
]            